[package]
name = "librms"
description = "NVIDIA Rack Manager Service client"
authors = [ "NVIDIA Engineering <dcss-forge-rms@exchange.nvidia.com>" ]
repository = "https://github.com/NVIDIA/nv-rms-client.git"
license = "Apache-2.0"
version = "0.0.12"
edition = "2024"

[dependencies]
tonic-client-wrapper = { path = "tonic-client-wrapper", default-features = false, version = "1.0.0", features = ["codegen"] }

tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.14", features = ["tls-ring"] }
hyper = { version = "^1" }
hyper-rustls = { version = "^0.27", features = ["http2"] }
hyper-timeout = { version = "^0.5" }
hyper-util = { version = "^0.1" }
rustls = { version = "0.23.16" }
async-trait = "0.1.88"
chrono = "0.4"
eyre = "0.6.12"
prost = "0.14.1"
rustls-pemfile = "2.2.0"
serde = {  version = "1", features = ["derive"] }
thiserror = "2.0.14"
tonic-prost = "0.14"
tower = "0.5"
tracing = "0.1.41"
tryhard = "0.5.1"

[build-dependencies]
tonic-client-wrapper = { path = "tonic-client-wrapper", default-features = false, features = ["codegen"] }
tonic-prost-build = "0.14"

[lints.clippy]
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
large_stack_arrays = "warn"
unused_async = "warn"
